crates/invariant-macros/tests/ui/fail_invalid_format.rs
use invariant_macros::invariant;

#[invariant("BADFORMAT")]
fn test_invalid() {
    // invalid format should fail to compile
}

fn main() {}
